# mankind

./: .gitignore  Makefile
client/: index.html  main.js  package-lock.json  package.json
client/ui/binding/: eventable.js  observable.js
client/ui/core/: animation.js  panel.js  visual.js
client/ui/navigation/: router.js
client/ui/views/: login.js  nav.js
gameserver/: auth.py  config.py  database.py  jobs.py  models.py  pyproject.toml  requirements.txt  schemas.py  service.py  storage.py  utils.py  vec3.py
gameserver/buildings/: factory.py
gameserver/commands/: commands.py  space.py
gameserver/data/: mankind.db
gameserver/economics/: charts.py  factory.py
gameserver/economics/production/: queue.py  recipe.py
gameserver/items/: __init__.py
gameserver/items/base/: __init__.py  interfaces.py  item.py
gameserver/items/resources/: __init__.py  metals.py  non-metals.py  non_metals.py  planetary.py  refined.py
gameserver/network/: client.py  context.py  rpc.py  server.py
gameserver/public/: index.html
gameserver/public/assets/: index-ebb83971.js
gameserver/routes/: accounts.py  admin.py  public.py  security.py  universe.py
gameserver/scripts/: bcrypt_tester.py  gen_system_links.py  gen_system_names.py  gen_universe.py  validate_system_links.py
gameserver/space/: flight.py  planets.py  universe.py
gameserver/space/ships/: ship.py
